Updating tweak Junction Priority logic  in interlockingimpl.java