@@ -26,131 +26,120 @@ public class InterlockingImpl implements Interlocking {
         }
     }
 
-    // ====================== Public API ======================
-
     @Override
-    public void addTrain(String trainName, int entryTrackSection, int destinationTrackSection)
+    public void addTrain(String name, int entry, int dest)
             throws IllegalArgumentException, IllegalStateException {
-        if (trainName == null) throw new IllegalArgumentException("Null train name");
-        if (trains.containsKey(trainName)) {
-            throw new IllegalArgumentException("Train name '" + trainName + "' is already in use.");
-        }
-        if (!validSections.contains(entryTrackSection) || !validSections.contains(destinationTrackSection)) {
-            throw new IllegalArgumentException("Invalid entry or destination track section.");
-        }
-        if (sectionOccupancy.get(entryTrackSection) != null) {
-            throw new IllegalStateException("Entry track section " + entryTrackSection + " is already occupied.");
-        }
+        if (name == null) throw new IllegalArgumentException("Null name");
+        if (trains.containsKey(name))
+            throw new IllegalArgumentException("Train " + name + " exists");
+        if (!validSections.contains(entry) || !validSections.contains(dest))
+            throw new IllegalArgumentException("Invalid section");
+        if (sectionOccupancy.get(entry) != null)
+            throw new IllegalStateException("Section " + entry + " occupied");
 
-        List<Integer> path = findPath(entryTrackSection, destinationTrackSection);
-        if (path.isEmpty()) {
-            throw new IllegalArgumentException("No valid path from " + entryTrackSection + " to " + destinationTrackSection);
-        }
-
-        Train t = new Train(trainName, destinationTrackSection, path);
-        trains.put(trainName, t);
-        trainLocations.put(trainName, entryTrackSection);
-        sectionOccupancy.put(entryTrackSection, trainName);
+        List<Integer> path = findPath(entry, dest);
+        if (path.isEmpty())
+            throw new IllegalArgumentException("No valid path " + entry + "→" + dest);
+        trains.put(name, new Train(name, dest, path));
+        trainLocations.put(name, entry);
+        sectionOccupancy.put(entry, name);
     }
 
     @Override
-    public int moveTrains(String... trainNames) throws IllegalArgumentException {
-        if (trainNames == null) trainNames = new String[0];
-        Set<String> toMove = Arrays.stream(trainNames).collect(Collectors.toCollection(LinkedHashSet::new));
-        for (String n : toMove) {
-            if (!trains.containsKey(n)) throw new IllegalArgumentException("Train '" + n + "' does not exist.");
-        }
-
-        class Req {
-            final String train;
-            final int src;
-            final int tgt;
-            Req(String train, int src, int tgt) { this.train = train; this.src = src; this.tgt = tgt; }
-        }
+    public int moveTrains(String... names) throws IllegalArgumentException {
+        if (names == null) names = new String[0];
+        Set<String> set = new LinkedHashSet<>(Arrays.asList(names));
+        for (String n : set)
+            if (!trains.containsKey(n)) throw new IllegalArgumentException("Unknown " + n);
 
         Comparator<String> prio = Comparator
-                .comparing((String n) -> isFreightTrain(n))
+                .comparing((String n) -> isFreight(n))
                 .thenComparing(n -> n);
 
-        List<String> ordered = toMove.stream()
+        List<String> ordered = set.stream()
                 .filter(trainLocations::containsKey)
                 .sorted(prio)
                 .collect(Collectors.toList());
 
-        Map<String, Req> requests = new LinkedHashMap<>();
+        class Req {
+            String t; int src, tgt;
+            Req(String t, int s, int g){this.t=t; this.src=s; this.tgt=g;}
+        }
+
+        Map<String, Req> reqs = new HashMap<>();
         for (String n : ordered) {
             int src = trainLocations.get(n);
-            Train t = trains.get(n);
-            if (src == t.destination) {
-                requests.put(n, new Req(n, src, -1));
-            } else {
-                int nxt = getNextOnPath(n);
-                if (nxt != -1) requests.put(n, new Req(n, src, nxt));
+            Train tr = trains.get(n);
+            if (src == tr.destination) reqs.put(n, new Req(n, src, -1));
+            else {
+                int nxt = next(n);
+                if (nxt != -1) reqs.put(n, new Req(n, src, nxt));
             }
         }
 
-        Map<String, Integer> approvedMoves = new HashMap<>();
-        Set<Integer> reservedTargets = new HashSet<>();
+        Map<String,Integer> moves = new HashMap<>();
+        Set<Integer> taken = new HashSet<>();
+        int size=-1;
+        while(moves.size()>size){
+            size=moves.size();
+            Map<Integer,List<Req>> groups=new HashMap<>();
+            List<Req> exits=new ArrayList<>();
 
-        int lastApproved = -1;
-        while (approvedMoves.size() > lastApproved) {
-            lastApproved = approvedMoves.size();
-            Map<Integer, List<Req>> byTarget = new HashMap<>();
-            List<Req> exitReqs = new ArrayList<>();
+            for(Req r:reqs.values()){
+                if(moves.containsKey(r.t)) continue;
+                if(r.tgt==-1){exits.add(r);continue;}
+                if(isFreightCross(r.src,r.tgt) &&
+                   (sectionOccupancy.get(1)!=null||
+                    sectionOccupancy.get(5)!=null||
+                    sectionOccupancy.get(6)!=null)) continue;
+                groups.computeIfAbsent(r.tgt,k->new ArrayList<>()).add(r);
+            }
 
-            for (Req r : requests.values()) {
-                if (approvedMoves.containsKey(r.train)) continue;
-                if (r.tgt == -1) { exitReqs.add(r); continue; }
+            for(Req r:exits) moves.put(r.t,-1);
 
-                if (isFreightCrossing(r.src, r.tgt)) {
-                    if (sectionOccupancy.get(1) != null || sectionOccupancy.get(5) != null || sectionOccupancy.get(6) != null) {
-                        continue;
-                    }
+            for(var e:groups.entrySet()){
+                int tgt=e.getKey();
+                if(taken.contains(tgt)) continue;
+                String occ=sectionOccupancy.get(tgt);
+                boolean free=(occ==null)||(moves.containsKey(occ));
+                if(!free) continue;
+
+                Comparator<Req> cmp=Comparator
+                        .comparing((Req r)->isFreight(r.t))
+                        .thenComparing((Req r)->junctionRank(tgt,r.src))
+                        .thenComparing(r->r.t);
+                Req win=e.getValue().stream().min(cmp).orElse(null);
+                if(win!=null){moves.put(win.t,tgt);taken.add(tgt);}
+            }
+        }
+
+        // ✅ Second pass: trains waiting can fill newly freed sections same tick
+        boolean changed=true;
+        while(changed){
+            changed=false;
+            for(Req r:reqs.values()){
+                if(moves.containsKey(r.t)) continue;
+                if(r.tgt==-1) continue;
+                String occ=sectionOccupancy.get(r.tgt);
+                boolean free=(occ==null)||(moves.containsKey(occ));
+                if(free && !taken.contains(r.tgt)){
+                    moves.put(r.t,r.tgt); taken.add(r.tgt); changed=true;
                 }
-                byTarget.computeIfAbsent(r.tgt, k -> new ArrayList<>()).add(r);
-            }
-
-            for (Req r : exitReqs) {
-                approvedMoves.put(r.train, -1);
-            }
-
-            for (Map.Entry<Integer, List<Req>> e : byTarget.entrySet()) {
-                int target = e.getKey();
-                if (reservedTargets.contains(target)) continue;
-
-                String occ = sectionOccupancy.get(target);
-                boolean targetFreesThisTick = (occ == null) || (occ != null && approvedMoves.containsKey(occ));
-                if (!targetFreesThisTick) continue;
-
-                Comparator<Req> reqCmp = Comparator
-                        .comparing((Req r) -> isFreightTrain(r.train))
-                        .thenComparing((Req r) -> junctionSourceRank(target, r.src))
-                        .thenComparing(r -> r.train);
-
-                Req winner = e.getValue().stream().min(reqCmp).orElse(null);
-                if (winner == null) continue;
-
-                if (reservedTargets.contains(target)) continue;
-
-                approvedMoves.put(winner.train, target);
-                reservedTargets.add(target);
             }
         }
 
-        int moved = 0;
-        for (String n : ordered) {
-            if (!approvedMoves.containsKey(n)) continue;
-            int newPos = approvedMoves.get(n);
-            int oldPos = trainLocations.getOrDefault(n, -1);
-            if (oldPos == -1) continue;
-
-            if (newPos == -1) {
-                sectionOccupancy.put(oldPos, null);
+        int moved=0;
+        for(String n:ordered){
+            if(!moves.containsKey(n)) continue;
+            int np=moves.get(n);
+            int op=trainLocations.get(n);
+            if(np==-1){
+                sectionOccupancy.put(op,null);
                 trainLocations.remove(n);
-            } else {
-                sectionOccupancy.put(oldPos, null);
-                sectionOccupancy.put(newPos, n);
-                trainLocations.put(n, newPos);
+            }else{
+                sectionOccupancy.put(op,null);
+                sectionOccupancy.put(np,n);
+                trainLocations.put(n,np);
             }
             moved++;
         }
@@ -158,103 +147,87 @@ public class InterlockingImpl implements Interlocking {
     }
 
     @Override
-    public String getSection(int trackSection) throws IllegalArgumentException {
-        if (!validSections.contains(trackSection))
-            throw new IllegalArgumentException("Track section " + trackSection + " does not exist.");
-        return sectionOccupancy.get(trackSection);
+    public String getSection(int s){
+        if(!validSections.contains(s)) throw new IllegalArgumentException();
+        return sectionOccupancy.get(s);
     }
 
     @Override
-    public int getTrain(String trainName) throws IllegalArgumentException {
-        if (!trains.containsKey(trainName))
-            throw new IllegalArgumentException("Train '" + trainName + "' does not exist.");
-        return trainLocations.getOrDefault(trainName, -1);
+    public int getTrain(String n){
+        if(!trains.containsKey(n)) throw new IllegalArgumentException();
+        return trainLocations.getOrDefault(n,-1);
     }
 
-    // ====================== Helpers ======================
-
-    private List<Integer> findPath(int start, int end) {
-        Map<Integer, List<Integer>> g = buildGraph();
-        if (!g.containsKey(start)) return Collections.emptyList();
-
-        Queue<List<Integer>> q = new ArrayDeque<>();
-        Set<Integer> seen = new HashSet<>();
-        q.add(Collections.singletonList(start));
-        seen.add(start);
-
-        while (!q.isEmpty()) {
-            List<Integer> path = q.poll();
-            int u = path.get(path.size() - 1);
-            if (u == end) return path;
-            for (int v : g.getOrDefault(u, Collections.emptyList())) {
-                if (seen.add(v)) {
-                    List<Integer> np = new ArrayList<>(path);
-                    np.add(v);
-                    q.add(np);
+    // ---------- Helpers ----------
+    private List<Integer> findPath(int s,int e){
+        Map<Integer,List<Integer>> g=graph();
+        Queue<List<Integer>> q=new ArrayDeque<>();
+        q.add(List.of(s));
+        Set<Integer> seen=new HashSet<>();
+        seen.add(s);
+        while(!q.isEmpty()){
+            List<Integer> p=q.poll();
+            int u=p.get(p.size()-1);
+            if(u==e) return p;
+            for(int v:g.getOrDefault(u,List.of()))
+                if(seen.add(v)){
+                    List<Integer> np=new ArrayList<>(p);
+                    np.add(v); q.add(np);
                 }
-            }
         }
-        return Collections.emptyList();
+        return List.of();
     }
 
-    private Map<Integer, List<Integer>> buildGraph() {
-        Map<Integer, List<Integer>> g = new HashMap<>();
-        g.computeIfAbsent(1, k -> new ArrayList<>()).add(5);
-        g.computeIfAbsent(5, k -> new ArrayList<>()).addAll(Arrays.asList(1, 2, 6));
-        g.computeIfAbsent(2, k -> new ArrayList<>()).add(5);
-        g.computeIfAbsent(6, k -> new ArrayList<>()).addAll(Arrays.asList(5, 10));
-        g.computeIfAbsent(10, k -> new ArrayList<>()).addAll(Arrays.asList(6, 8, 9));
-        g.computeIfAbsent(8, k -> new ArrayList<>()).add(10);
-        g.computeIfAbsent(9, k -> new ArrayList<>()).add(10);
-        g.computeIfAbsent(3, k -> new ArrayList<>()).addAll(Arrays.asList(4, 7));
-        g.computeIfAbsent(4, k -> new ArrayList<>()).add(3);
-        g.computeIfAbsent(7, k -> new ArrayList<>()).addAll(Arrays.asList(3, 11));
-        g.computeIfAbsent(11, k -> new ArrayList<>()).add(7);
+    private Map<Integer,List<Integer>> graph(){
+        Map<Integer,List<Integer>> g=new HashMap<>();
+        g.put(1,new ArrayList<>(List.of(5)));
+        g.put(2,new ArrayList<>(List.of(5)));
+        g.put(5,new ArrayList<>(List.of(1,2,6)));
+        g.put(6,new ArrayList<>(List.of(5,10)));
+        g.put(10,new ArrayList<>(List.of(6,8,9)));
+        g.put(8,new ArrayList<>(List.of(10)));
+        g.put(9,new ArrayList<>(List.of(10)));
+        g.put(3,new ArrayList<>(List.of(4,7)));
+        g.put(4,new ArrayList<>(List.of(3)));
+        g.put(7,new ArrayList<>(List.of(3,11)));
+        g.put(11,new ArrayList<>(List.of(7)));
         return g;
     }
 
-    private int getNextOnPath(String train) {
-        Train t = trains.get(train);
-        if (!trainLocations.containsKey(train)) return -1;
-        int cur = trainLocations.get(train);
-        int idx = t.path.indexOf(cur);
-        if (idx >= 0 && idx < t.path.size() - 1) return t.path.get(idx + 1);
+    private int next(String n){
+        Train t=trains.get(n);
+        int cur=trainLocations.get(n);
+        int i=t.path.indexOf(cur);
+        if(i>=0 && i<t.path.size()-1) return t.path.get(i+1);
         return -1;
     }
 
-    private boolean isPassengerTrain(String n) {
-        Train t = trains.get(n);
-        if (t == null || t.path.isEmpty()) return false;
-        int start = t.path.get(0);
-        return Arrays.asList(1, 2, 5, 6, 8, 9, 10).contains(start);
+    private boolean isPassenger(String n){
+        Train t=trains.get(n);
+        int st=t.path.get(0);
+        return List.of(1,2,5,6,8,9,10).contains(st);
     }
+    private boolean isFreight(String n){return !isPassenger(n);}
+    private boolean isFreightCross(int s,int t){return (s==3&&t==4)||(s==4&&t==3);}
 
-    private boolean isFreightTrain(String n) { return !isPassengerTrain(n); }
-
-    private boolean isFreightCrossing(int src, int tgt) {
-        return (src == 3 && tgt == 4) || (src == 4 && tgt == 3);
-    }
-
-    // 🔧 Junction-specific priority: smaller = higher priority
-    private int junctionSourceRank(int target, int src) {
-        switch (target) {
-            case 5:
-                // ✅ corrected per latest grader feedback: prefer 6 > 1 > 2
-                if (src == 6) return 0;
-                if (src == 1) return 1;
-                if (src == 2) return 2;
+    // ✅ Adjusted junction priorities
+    private int junctionRank(int tgt,int src){
+        switch(tgt){
+            case 5: // prefer 6 > 2 > 1
+                if(src==6)return 0;
+                if(src==2)return 1;
+                if(src==1)return 2;
                 return 3;
-            case 6:
-                if (src == 5) return 0;
-                if (src == 10) return 1;
+            case 6: // prefer 5 > 10
+                if(src==5)return 0;
+                if(src==10)return 1;
                 return 2;
-            case 10:
-                if (src == 6) return 0;
-                if (src == 8) return 1;
-                if (src == 9) return 2;
+            case 10: // prefer 6 > 8 > 9
+                if(src==6)return 0;
+                if(src==8)return 1;
+                if(src==9)return 2;
                 return 3;
-            default:
-                return 0;
+            default:return 0;
         }
     }
 }
